# pfngouin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: data_generation.py  simulation.ipynb  tutorial.ipynb
src/pfngouin/: __init__.py  _core.py  datasets.py  inference.py
src/pfngouin/models/: __init__.py  base.py  linear.py  tabpfn.py  xgboost.py
tests/: conftest.py  test_augmentation.py  test_error_rates.py
