[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pfngouin"
version = "0.1.0"
description = "Foundation model-powered statistical inference"
requires-python = ">=3.10"
authors = [
    { name = "Rickard Karlsson" },
]
readme = "README.md"
dependencies = ["numpy>=1.24", "scipy>=1.11", "pingouin>=0.5", "pandas>=1.5", "scikit-learn>=1.3", "tabpfn-client>=0.0.8"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
xgboost = ["xgboost>=2.0", "scikit-learn>=1.3"]

[tool.hatch.version]
path = "src/pfngouin/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not ml_models'"
markers = [
    "ml_models: tests that run XGBoost or TabPFN (excluded by default, run with -m ml_models)",
]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbconvert>=7.17.0",
]
